--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,18 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: setup
+      - name: setup-nodejs
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: setup-python3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
       - name: main
         env:
           ACCESS_TOKEN:  ${{ secrets.ACCESS_TOKEN }}
         run: |
-          apt install -y python3.8
           git config --global user.email "h.nakamura0903@gmail.com"
           git config --global user.name "nekoTheShadow"
           git clone https://github.com/nekoTheShadow/codeforces.git
