--- a/script/package.json
+++ b/script/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html -d ../docs"
+    "build": "parcel build index.html -d ../docs --public-url https://nekotheshadow.github.io/codeforces/"
   },
   "dependencies": {
     "@riotjs/hot-reload": "^4.0.1",
